--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payment_user_selection.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payment_user_selection.html.twig
@@ -7,6 +7,6 @@
 
         {{form_widget(form._token)}}
 
-        <input class="button_custom" type="submit" value="{% trans %}button_4{% endtrans %}"/>
+        <input class="button_custom" type="submit" value="{% trans %}index_12{% endtrans %}"/>
     </form>
 </div>
