--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/roleUser_creation.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/roleUser_creation.html.twig
@@ -14,6 +14,6 @@
 
         {{form_widget(form._token)}}
 
-        <input class="button_custom" type="submit" value="{% trans %}button_1{% endtrans %}"/>
+        <input class="button_custom" type="submit" value="{% trans %}index_9{% endtrans %}"/>
     </form>
 </div>
