--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/setting.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/setting.html.twig
@@ -118,6 +118,6 @@
 
         {{form_widget(form._token)}}
 
-        <input class="button_custom" type="submit" value="{% trans %}button_3{% endtrans %}"/>
+        <input class="button_custom" type="submit" value="{% trans %}index_11{% endtrans %}"/>
     </form>
 </div>
