--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/recover_password.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/recover_password.html.twig
@@ -8,7 +8,7 @@
             
             {{form_widget(form._token)}}
             
-            {{form_widget(form.submit, {'label': "button_4", 'dense': "", 'raised': ""})}}
+            {{form_widget(form.submit, {'label': "index_12", 'dense': "", 'raised': ""})}}
         </form>
     {% else %}
         <h1 class="mdc-typography--headline6">{% trans %}recover_password_3{% endtrans %}</h1>
@@ -18,7 +18,7 @@
             
             {{form_widget(form._token)}}
 
-            {{form_widget(form.submit, {'label': "button_4", 'dense': "", 'raised': ""})}}
+            {{form_widget(form.submit, {'label': "index_12", 'dense': "", 'raised': ""})}}
         </form>
     {% endif %}
 </div>
