--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/upload.css
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/upload.css
@@ -1,10 +1,5 @@
-#upload .file { margin-bottom: 5px; }
-#upload .container_box { display: none; }
-#upload .container_box .text { position: relative; margin: 5px 0px; padding: 10px; }
-#upload .container_box .text p { margin: 0; }
-#upload .container_box .text .fa-close { cursor: pointer; position: absolute; top: 10px; right: 10px; }
-#upload .container_controls { display: none; }
-#upload .container_controls .container_progressBar { display: inline-block; vertical-align: middle; width: 50%; margin-bottom: 5px; }
-#upload .container_controls .container_buttons { display: inline-block; vertical-align: middle; margin-bottom: 5px; }
+.upload { width: 50%; }
+.upload .mdc-linear-progress { display: none; margin: 10px 0; }
+.upload .controls { display: none; }
 
 /*# sourceMappingURL=upload.css.map */
