--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/upload.scss
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/upload.scss
@@ -1,45 +1,14 @@
 // Version 1.0.0
 
-#upload {
-    .file {
-        margin-bottom: 5px;
+.upload {
+    width: 50%;
+    
+    .mdc-linear-progress {
+        display: none;
+        margin: 10px 0;
     }
     
-    .container_box {
+    .controls {
         display: none;
-        
-        .text {
-            position: relative;
-            margin: 5px 0px;
-            padding: 10px;
-            
-            p {
-                margin: 0;
-            }
-            
-            .fa-close {
-                cursor: pointer;
-                position: absolute;
-                top: 10px;
-                right: 10px;
-            }
-        }
-    }
-    
-    .container_controls {
-        display: none;
-        
-        .container_progressBar {
-            display: inline-block;
-            vertical-align: middle;
-            width: 50%;
-            margin-bottom: 5px;
-        }
-        
-        .container_buttons {
-            display: inline-block;
-            vertical-align: middle;
-            margin-bottom: 5px;
-        }
     }
 }
