--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/progress_bar.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/progress_bar.html.twig
@@ -1,5 +1,10 @@
-<div class="progressBar progress">
-    <div class="progress-bar progress-bar-info">
-        <span></span>
+<div class="mdc-linear-progress" role="progressbar">
+    <div class="mdc-linear-progress__buffering-dots"></div>
+    <div class="mdc-linear-progress__buffer"></div>
+    <div class="mdc-linear-progress__bar mdc-linear-progress__primary-bar">
+        <span class="mdc-linear-progress__bar-inner"></span>
+    </div>
+    <div class="mdc-linear-progress__bar mdc-linear-progress__secondary-bar">
+        <span class="mdc-linear-progress__bar-inner"></span>
     </div>
 </div>
