--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/upload.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/upload.html.twig
@@ -1,21 +1,15 @@
-<div id="upload">
+<div class="upload">
     <input class="file" type="file" name="file"/>
-    <div class="container_box">
-        <div class="bg-warning text">
-            <i id="upload_text_close" class="fa fa-close"></i>
-            <div>
-                <p></p>
-            </div>
-        </div>
-    </div>
-    <div class="container_controls">
-        <div id="progressBar_upload" class="container_progressBar">
-            {{-include("@UebusaitoBundleViews/include/progress_bar.html.twig")-}}
-        </div>
-        <div class="container_buttons">
-            <p class="button_1 button_custom_success"><i class="fa fa-play"></i> <span>{% trans %}upload_1{% endtrans %}</span></p>
-            <p class="button_2 button_custom_danger"><i class="fa fa-stop"></i> <span>{% trans %}upload_2{% endtrans %}</span></p>
-        </div>
+    {{-include("@UebusaitoBundleViews/include/progress_bar.html.twig")-}}
+    <div class="controls">
+        <button class="mdc-button mdc-button--raised button_start" type="button">
+            <i class="material-icons mdc-button__icon" aria-hidden="true">play_arrow</i>
+            <span>{% trans %}upload_1{% endtrans %}</span>
+        </button>
+        <button class="mdc-button mdc-button--raised button_stop" type="button">
+            <i class="material-icons mdc-button__icon" aria-hidden="true">stop</i>
+            <span>{% trans %}upload_2{% endtrans %}</span>
+        </button>
     </div>
 </div>
 <script type="text/javascript">
