--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_profile.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_profile.html.twig
@@ -66,7 +66,7 @@
 
         {{form_widget(form._token)}}
 
-        <input class="button_custom" type="submit" value="{% trans %}button_3{% endtrans %}"/>
+        <input class="button_custom" type="submit" value="{% trans %}index_11{% endtrans %}"/>
     </form>
 
     {% if is_granted("ROLE_ADMIN") == true and response.values.id > 5 %}
