--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payment_selection.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payment_selection.html.twig
@@ -55,7 +55,7 @@
             </table>
         </div>
     </div>
-    <button id="cp_payment_selection_button_desktop" class="button_custom" type="button">{% trans %}button_4{% endtrans %}</button>
+    <button id="cp_payment_selection_button_desktop" class="button_custom" type="button">{% trans %}index_12{% endtrans %}</button>
 </div>
 
 <div id="cp_payment_selection_mobile" class="display_mobile">
@@ -67,7 +67,7 @@
 
             {{form_widget(form._token)}}
 
-            <input class="button_custom" type="submit" value="{% trans %}button_4{% endtrans %}"/>
+            <input class="button_custom" type="submit" value="{% trans %}index_12{% endtrans %}"/>
         </form>
     </div>
 </div>
