--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile_credit.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile_credit.html.twig
@@ -1,30 +1,24 @@
-{% form_theme form "bootstrap_3_layout.html.twig" %}
+{% form_theme form "@UebusaitoBundleViews/layout/layout_form_materialDesign.html.twig" %}
 
-<div>
-    <h3 class="form_title">{% trans %}profile_credit_1{% endtrans %}</h3>
-    <form id="form_cp_profile_credit" action="{{path("cp_profile_credit", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-        <fieldset class="accordion_container">
-            <legend class="title"><i class="fa fa-chevron-circle-down icon"></i> {% trans %}profile_credit_2{% endtrans %}</legend>
-            <div class="content">
-                <p><b>{% trans %}profile_credit_3{% endtrans %}</b> {{response.values.currentCredit}}</p>
-                <p><b>{% trans %}profile_credit_4{% endtrans %}</b> {{settingRow['payPal_credit_amount']}} <u>{{settingRow['payPal_currency_code']|upper}}</u></p>
+<form id="form_cp_profile_credit" action="{{path("cp_profile_credit", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+    <fieldset class="container_accordion">
+        <legend>{% trans %}profile_credit_1{% endtrans %}</legend>
+        <p>{% trans %}profile_credit_2{% endtrans %}</p>
+        <button class="mdc-button mdc-button--raised button_accordion" type="button">
+            {% trans %}index_14{% endtrans %}
+        </button>
+        <div class="accordion">
+            <p><b>{% trans %}profile_credit_3{% endtrans %}</b> {{response.values.currentCredit}}</p>
+            <p><b>{% trans %}profile_credit_4{% endtrans %}</b> {{settingRow['payPal_credit_amount']}} <u>{{settingRow['payPal_currency_code']|upper}}</u></p>
+            
+            {{form_row(form.credit, {'label': "profile_credit_5", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "monetization_on"})}}
 
-                <div class="form-group">
-                    {{form_label(form.credit, "profile_credit_5")}}
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="fa fa-paypal"></i></span>
-                        {{form_errors(form.credit)}}
-                        {{form_widget(form.credit)}}
-                    </div>
-                </div>
-
-                {{form_widget(form._token)}}
-
-                <input class="button_payPal margin_bottom" type="submit" value=""/>
-            </div>
-        </fieldset>
-    </form>
-</div>
+            {{form_widget(form._token)}}
+            
+            {{form_widget(form.submit, {'label': "", 'dense': "", 'raised': "", 'icon': "payment"})}}
+        </div>
+    </fieldset>
+</form>
 
 {% if response.values.payPalSandbox == true %}
     <form id="form_cp_profile_credit_paypal" class="visibility_hidden" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
