--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile_password.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile_password.html.twig
@@ -1,40 +1,20 @@
-{% form_theme form "bootstrap_3_layout.html.twig" %}
+{% form_theme form "@UebusaitoBundleViews/layout/layout_form_materialDesign.html.twig" %}
 
-<div>
-    <h3 class="form_title">{% trans %}profile_password_1{% endtrans %}</h3>
-    <form id="form_cp_profile_password" action="{{path("cp_profile_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-        <fieldset class="accordion_container">
-            <legend class="title"><i class="fa fa-chevron-circle-down icon"></i> {% trans %}profile_password_2{% endtrans %}</legend>
-            <div class="content">
-                <div class="form-group">
-                    {{form_label(form.old, "profile_password_3")}}
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="fa fa-key"></i></span>
-                        {{form_errors(form.old)}}
-                        {{form_widget(form.old)}}
-                    </div>
-                </div>
-                <div class="form-group">
-                    {{form_label(form.new, "profile_password_4")}}
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="fa fa-key"></i></span>
-                        {{form_errors(form.new)}}
-                        {{form_widget(form.new)}}
-                    </div>
-                </div>
-                <div class="form-group">
-                    {{form_label(form.newConfirm, "profile_password_5")}}
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="fa fa-key"></i></span>
-                        {{form_errors(form.newConfirm)}}
-                        {{form_widget(form.newConfirm)}}
-                    </div>
-                </div>
+<form id="form_cp_profile_password" action="{{path("cp_profile_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+    <fieldset class="container_accordion">
+        <legend>{% trans %}profile_password_1{% endtrans %}</legend>
+        <p>{% trans %}profile_password_2{% endtrans %}</p>
+        <button class="mdc-button mdc-button--raised button_accordion" type="button">
+            {% trans %}index_14{% endtrans %}
+        </button>
+        <div class="accordion">
+            {{form_row(form.old, {'label': "profile_password_3", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
+            {{form_row(form.new, {'label': "profile_password_4", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
+            {{form_row(form.newConfirm, {'label': "profile_password_5", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
 
-                {{form_widget(form._token)}}
-
-                <input class="button_custom margin_bottom" type="submit" value="{% trans %}button_3{% endtrans %}"/>
-            </div>
-        </fieldset>
-    </form>
-</div>
+            {{form_widget(form._token)}}
+            
+            {{form_widget(form.submit, {'label': "index_11", 'dense': "", 'raised': ""})}}
+        </div>
+    </fieldset>
+</form>
