--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/registration.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/registration.html.twig
@@ -41,7 +41,7 @@
 
             {{form_widget(form._token)}}
 
-            {{form_widget(form.submit, {'label': "button_4", 'dense': "", 'raised': ""})}}
+            {{form_widget(form.submit, {'label': "index_12", 'dense': "", 'raised': ""})}}
         </form>
     </div>
 {% endif %}
